Add notes to code

--- a/foundations/01-css-methods/style.css
+++ b/foundations/01-css-methods/style.css
@@ -1,3 +1,6 @@
+/* TOP defines it as <div> */
+/* you dont need to define a class, you can just call the atrribute */
+
 .banner {
     text-align: center; 
     font-family: 'Times New Roman', Times, serif; 
