--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,5 +1,5 @@
 /* This class didnt need a separate attribute.
-I could ass sans-serif right on the font */
+I could add sans-serif right on the font */
 .odd {
     background-color: #ffc0cb;
     font: Verdana, 'Deja Vu'; 
