--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .profile-image {
@@ -20,6 +24,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  margin-left: 0;
 }
 
 .logo {
@@ -35,6 +40,7 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  margin-right: 0;
 }
 
 a {
@@ -45,4 +51,16 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  margin: 0%;
+  padding: 0;
+  gap: 16px;
+  
 }
+
+.left,.right {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
