--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -5,11 +5,37 @@ body {
 img {
   width: 100px;
   height: 100px;
+  margin: 0 auto;
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom:32px;
+}
+
+.title-box {
+  display: flex;
+  justify-content: center;
+  /* border: solid black 2px; */
+}
+
+.item-box {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 52px;
+  flex: 0;
+  /* border: solid red 3px; */
+}
+
+
+.text {
+  display: flex;
+  justify-content: center;
+  /* gap: 52px; */
+  /* border: blue solid 2px; */
+  width: 100px;
 }
 
 /* do not edit this footer */
