--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,28 +2,83 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  /* display: flex; */
+  /* flex-direction: column; */
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-weight: 900;
+  font-size: 32px;
+  display: flex;
+  align-items: center;
+  padding-left: 16px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  flex-shrink: 1;
+  flex-grow: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* display: flex; */
+  /* align-self: flex-end; */
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  /* max-width: 10rem; */
+  display: flex;
+  /* flex-grow: 1; */
+  flex-shrink: 0;
+  padding: 16px;
+  /* flex-direction: column; */
+  /* min-height: 100vh; */
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  flex-wrap: wrap;
+  flex-basis: 200px;
+  flex-grow: 0;
+  flex-shrink: 0;
+  padding: 35px;
+}
+
+.card-container {
+  /* margin-left: 10rem; */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  flex-shrink: 1;
+  /* flex-shrink: 0; */
+  /* margin-bottom: 14em; */
+  gap: 20px 10px;
+  padding: 32px;
+}
+
+.container {
+ display: flex;
+ justify-content: space-around;
+  /* flex-wrap: wrap; */
+}
+
+a {
+  font-size: 24px;
+  color: #eee;
+  text-decoration: none;
+}
+
+ul {
+  list-style-type: none;
 }
